# port_reminder

./: .env.example  .gitignore  Portfolio Tracker.bat  README.md  config.cloud.yaml  daily_fetch.bat  daily_remind.bat  migrate_to_sheets.py  pyproject.toml  requirements.txt  server.py  sheets.py  telegram_fetch.py  telegram_remind.py  tracker.py  viewer.py
.github/workflows/: fetch.yml  remind.yml
viewer/: app.py  dialogs.py  themes.py
viewer/charts/: base.py  correlation.py  cumulative.py  drawdown.py  period.py  value.py  volatility.py
viewer/data/: compute.py  excel_io.py  loader.py
